<resources>
    <string name="app_name">Todo App</string>
    <string name="action_settings">Settings</string>

    <string name="todo_title_label">Title</string>
    <string name="todo_title_hint">Todo...</string>
    <string name="button_save">Add</string>
    <string name="empty_not_saved">empty cannot be saved.</string>
    <string name="todo_description_label">Describe your taskEntry...</string>
    <string name="todo_complete_label">Completed</string>
    <string name="clear_all_data">Clear All</string>
    <string name="todo_updated">Todo App Updated Successfully</string>
    <string name="todo_date_label">Please Select  Date</string>
    <string name="button_delete">Delete</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="clear_completed">Clear Completed</string>
</resources>
